HelloUltraviolet/Fixtures/RejectedSource/Expressions/QualifiedNameEliminatedBeforeTyping/Source/Main.uv
//! Rejected qualified-name specimen for pre-typing resolution elimination.

public procedure qualifiedNameEliminatedBeforeTypingReference() -> i32 {
    return MissingModule::missingValue
}
